--- a/additem.html
+++ b/additem.html
@@ -23,7 +23,7 @@ VFW 1201 -->
 			</hgroup>
 		</header>
 		<form>
-		<form action="#" method="post"> 
+		<form action="#" method="post" id="giftForm"/> 
 			<fieldset>
 				<legend>About this gift:</legend>
 			    	<label for="category">Gift Category</label>
@@ -36,7 +36,6 @@ VFW 1201 -->
 			    	 	<option value="Etc">Etc</option>
 			    	</select>
 			    		<legend>What is it?:</legend>
-				
 				<label for="comments"> Describe the gift:</label><textarea id="comments" placeholder="What is it?"></textarea>
 				<p></p>
 				<legend>Quantity:</legend>
@@ -57,7 +56,7 @@ VFW 1201 -->
 			<a href="#" id="clear">Clear Stored Data</a>
 			<a href="#" id="displayData">Display Data</a>
 			<a href="additem.html" id="addNew" style="display:none;">Add New Item</a>
-			<form action="#" method="post" id="contactForm" />
+		</nav>
 		<script src="main.js" type="text/javascript"></script>	
 	</body>
 	
