fixed the whole thing in order to get it to work!

--- a/additem.html
+++ b/additem.html
@@ -41,11 +41,11 @@ VFW 1201 -->
 				<input type="range" id='amount'name="amount" min="1" max="100" />
 			    <p></p>
 			    <legend>Where to buy it:</legend>
-					<input type="radio" checked value="Online" id="online" name="location" /><label for="online">Online</label></li>
-					<input type="radio" value="In a store." id="store" name="location" /><label for="store">In a store.</label></li>
+					<input type="radio" checked value="Online" id="online" name="location" /><label for="online">Online</label>
+					<input type="radio" value="In a store." id="store" name="location" /><label for="store">In a store.</label>
 				<p></p>
-				<li><label for="store">Store Name:</label><input type="text" id="store" placeholder="ex: Zappos.com, Best Buy" /></li>
-				<li><label for="url">Product URL (if applicable):</label><input type="url" id="url" /></li>
+				<label for="store">Store Name:</label><input type="text" id="store" placeholder="ex: Zappos.com, Best Buy" />
+				<label for="url">Product URL (if applicable):</label><input type="url" id="url" />
 				<p></p>
 				<legend>Date Added:</legend> <input type="date" id="date" name="user_date" />
 			 </fieldset>
