--- a/additem.html
+++ b/additem.html
@@ -22,11 +22,14 @@ VFW 1201 -->
 			<h1>Add to your Christmas list:</h1>
 			</hgroup>
 		</header>
-		<form action="#" method="post" id="giftForm"/> 
+		<form action="#" method="post" id="giftForm"> 
 			<fieldset>
 				<legend>About this gift:</legend>
+				<ul id="errors"></ul>
+				<ul id="questions">
 			    	<label for="category">Gift Category</label>
 			    	<select id="category">
+			    	    <option value="Choose">--Choose A Gift Category--</option>
 			    		<option value="Electronics">Electronics</option>
 			    	 	<option value="Movies & Games">Movies & Games</option>
 			    	 	<option value="Clothing/Accessories">Clothing & Accessories</option>
